--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/stup-node@v1
         with:
-          - node-version: 16
+          node-version: 16
       - run: npm install
       - run: npm run test
