--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/stup-node@v1
-        with:
+      - uses: actions/setup-node@v1
+        with: 
           node-version: 16
       - run: npm install
       - run: npm run test
