ci: add sonar cloud and setup sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=node-test
+sonar.projectKey=GaabrielRosa_ci-nodejs-cloud
+sonar.organization=gaabrielrosa
 sonar.projectName=node-test
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
@@ -7,5 +8,3 @@ sonar.tests=src
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.login=3212132123132132
-sonar.host.url=http://localhost:9000
